# entire-adapter

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  usage_example.py
.github/workflows/: ci.yml  publish.yml
adapter_live_test/: README.md  live_langgraph_agent.py
docs/: INTERVIEW_BRIEF.md  RELEASE.md
entire-sem/: .gitignore  README.md  go.mod  mise.toml
entire-sem/cmd/entire-sem/: main.go
entire-sem/internal/cli/: env.go  root.go  root_test.go
entire-sem/internal/gitutil/: git.go
entire-sem/internal/sem/: analyze.go  analyze_test.go  dependents.go  model.go  parser.go  parser_test.go  text.go  yaml.go
entire_adapter/: __init__.py  adapter.py  protocol.py  utils.py
examples/: crewai_multi_agent.py  langgraph_checkpoint_policies.py  langgraph_repo_editor.py
tests/: test_adapter.py  test_protocol.py  test_utils.py
tests/e2e/: test_crewai_e2e.py  test_langgraph_e2e.py
